tests/compile-fail/invalid_enum_tag.stderr
error: Undefined Behavior: enum value has invalid tag: 0x0000002a
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `std::mem::discriminant::<Foo>` at rustc_src/src/mem/mod.rs:1095:18
note: inside `main` at $DIR/invalid_enum_tag.rs:16:16
  --> $DIR/invalid_enum_tag.rs:16:16
   |
LL |     let _val = mem::discriminant(&f);
   |                ^^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

